# jta

./: .gitignore  .gitmodules  CMakeLists.txt  camera.c  camera.h  common.h  drawing_3d.c  drawing_3d.h  geo_test.c  gfx_math.c  gfx_math.h  jta_state.h  jwin_handlers.c  jwin_handlers.h  main.c  profiling_timer.c  profiling_timer.h  rotation_camera_test.c  test_configuration.cfg  ui.c  ui.h  ui_tree.c  ui_tree.h  vk_state.c  vk_state.h
cmake/: Shaders.cmake  compile_shader.sh
common/: common.c  common.h
config/: config_execution.c  config_execution.h  config_loading.c  config_loading.h
core/: jtaelements.c  jtaelements.h  jtaerr.c  jtaerr.h  jtaexport.c  jtaexport.h  jtaload.c  jtaload.h  jtamaterials.c  jtamaterials.h  jtamatrices.c  jtamatrices.h  jtanaturalbcs.c  jtanaturalbcs.h  jtanumericalbcs.c  jtanumericalbcs.h  jtapoints.c  jtapoints.h  jtaproblem.c  jtaproblem.h  jtaprofiles.c  jtaprofiles.h  jtasolve.c  jtasolve.h
example/: elm_structure1_fullstruct.csv  material_sample.csv  nat_structure1_fullstruct.csv  num_structure1_fullstruct.csv  pro_structure1_fullstruct.csv  pts_structure1_fullstruct.csv  turbo_cmap.csv
gfx/: bounding_box.c  bounding_box.h  camera.c  camera.h  color_map.c  color_map.h  drawing.c  drawing.h  drawing_3d.c  drawing_3d.h  frame_queue.c  frame_queue.h  gfx_math.h  gfxerr.c  gfxerr.h  mesh.c  mesh.h  rotation_camera_test.c  textures.c  textures.h  vk_resources.c  vk_resources.h  vk_state.c  vk_state.h
io/: CMakeLists.txt  iobase.c  iobase.h  iocfg.c  iocfg.h  iocsv.c  iocsv.h  ioerr.c  ioerr.h  ioxml.c  ioxml.h
io/tests/: csv_test.c  edit_csv_test.c  simple.csv  simple_csv_test.c  ugly.csv  ugly2.csv  ugly_csv_test.c
io/tests/cfg/: simple.ini  simple_cfg.c
io/tests/csv/: edit_csv_test.c  simple_csv_test.c  ugly2.csv  ugly_csv_test.c
jfw/: gfx_math.h  jfw_common.c  jfw_common.h  jfw_error.c  jfw_error.h  main.c  platform.c  platform.h  unicode_block_lookup_table.c  unicode_block_lookup_table.h  widget-base.c  widget-base.h  window.c  window.h
jfw/error_system/: error_codes.c  error_codes.h  error_stack.c  error_stack.h
jfw/practice_shaders/: compile_shaders.sh  frag.spv  practice.vert.glsl  practice_frag.frag.glsl  vert.spv
jfw/vk/: platform.c  platform.h
mem/: CMakeLists.txt  aligned_jalloc.c  aligned_jalloc.h  jalloc.c  jalloc.h  lin_alloc.c  lin_alloc.h  lin_jalloc.c  lin_jalloc.h  vk_allocator.c  vk_allocator.h  vk_mem_allocator.c  vk_mem_allocator.h
mem/tests/: aligned_test.c
shaders/: compile_shaders.sh  frg_shader3d.frag  frg_shader3d.spv  frg_shader_ui.frag  geo_shader_line.geom  geo_shader_line.spv  pix_shader3d.frag  pix_shader3d.spv  vtx_shader3d.spv  vtx_shader3d.vert  vtx_shader_ui.vert
solver/: jtaelements.c  jtaelements.h  jtaerr.h  jtamaterials.c  jtamaterials.h  jtanaturalbcs.c  jtanumericalbcs.c  jtanumericalbcs.h  jtaprofiles.c  jtbelements.c  jtbelements.h  jtberr.c  jtberr.h  jtbmaterials.c  jtbmaterials.h  jtbnaturalbcs.c  jtbnaturalbcs.h  jtbpoints.c  jtbpoints.h  jtbprofiles.c  jtbprofiles.h
strings/: CMakeLists.txt  formatted.c  formatted.h
strings/tests/: fmt_test.c
ui/: jwin_handlers.c  jwin_handlers.h  top_menu.c  top_menu.h  ui_sim_and_sol.c  ui_sim_and_sol.h  ui_tree.c  ui_tree.h
