add_executable(jio_test_csv iobase.c iocsv.c ioerr.c tests/csv/simple_csv_test.c)
configure_file(tests/csv/simple.csv "${CMAKE_BINARY_DIR}/csv_test_simple.csv" COPYONLY)
target_link_libraries(jio_test_csv PRIVATE jmem jdm)
add_test(NAME csv_test COMMAND jio_test_csv)

add_executable(jio_test_edit_csv iobase.c iocsv.c ioerr.c tests/csv/edit_csv_test.c)
configure_file(tests/csv/simple.csv "${CMAKE_BINARY_DIR}/csv_test_simple.csv" COPYONLY)
target_link_libraries(jio_test_edit_csv PRIVATE jmem jdm)
add_test(NAME csv_edit_test COMMAND jio_test_edit_csv)

add_executable(jio_test_ugly_csv iobase.c iocsv.c ioerr.c tests/csv/ugly_csv_test.c)
configure_file(tests/csv/ugly.csv "${CMAKE_BINARY_DIR}/csv_test_ugly.csv" COPYONLY)
configure_file(tests/csv/ugly2.csv "${CMAKE_BINARY_DIR}/csv_test_ugly2.csv" COPYONLY)
target_link_libraries(jio_test_ugly_csv PRIVATE jmem jdm)
add_test(NAME csv_ugly_test COMMAND jio_test_ugly_csv)

add_executable(jio_test_simple_cfg iobase.c ioerr.c iocfg.c tests/cfg/simple_cfg.c)
configure_file(tests/cfg/simple.ini "${CMAKE_BINARY_DIR}/ini_test_simple.ini" COPYONLY)
target_link_libraries(jio_test_simple_cfg PRIVATE jmem jdm)
add_test(NAME jio_test_simple_cfg COMMAND jio_test_simple_cfg)
